# TeaUponTweed.github.io

./: .gitignore  Makefile  README.md  app.py  complie_all.py  index.html  mbmblog.service  pyproject.toml  requirements.txt  setup.cfg
containers/: Dockerfile
posts/: 20220306_Valley_Girl.md  20220327_Birdy.md  20220327_Left_Behind.md  20220330_Housing_In_Denver.md  20220404_Moonstruck.md  20220420_Raising_Arizona.md  20220421_Red_Rock_West.md  20220421_The_Rock.md  20220627_Adaptation.md  20220627_Leaving_Las_Vegas.md
server/: app.py
src/derivativeworksblog/: Makefile  app.py  compile_all.py  complie_all.py
src/derivativeworksblog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/derivativeworksblog/posts/: 20220304_Zip_Up_These_Apps.md  20220306_Nic_Cage_Movie_Review_-_Valley_Girl.md  20220306_Valley_Girl.md  20220327_Birdy.md  20220327_Left_Behind.md  20220327_Nic_Cage_Movie_Review_-_Birdy.md  20220330_Recipes_Are_Broken.md  20220330_Recipes_Are_Too_Prescriptive.md  20220404_Moonstruck.md  20220420_Raising_Arizona.md  20220421_Nic_Cage_Movie_Review_-_The_Rock.md  20220421_Red_Rock_West.md  20220421_The_Rock.md  20220627_Adaptation.md  20220627_Leaving_Las_Vegas.md  20220627_Nic_Cage_Movie_Review_-_Adaptation.md  20220627_Nic_Cage_Movie_Review_-_Leaving_Las_Vegas.md  Adaptation.md  Birdy.md  Draft_2022119_ideas.md  Draft_CEM.md  Draft_JupyterNotebooks.md  Draft_Teaching_LLMs_To_Forget.md  Draft_blog_publishing_system.md  Draft_grid_based_web_dev.md  Draft_slow_software_dev.md  (+9 more)
static/: index.html  rss.xml  style.css
(+1 files in other folders)
