[metadata]
name = derivativeworksblog
version = 1.0.0
description = 'blog.derivativeworks.co'

[options]
python_requires = >=3.10
package_dir =
  =src
packages = find_namespace:
include_package_data = true
install_requires =
    flask
    gunicorn
    markdown2
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  compile-all = derivativeworksblog.compile_all:main
